--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "1.2.4",
     "@tensorflow/tfjs-core": "^4.22.0",
+    "@types/bcryptjs": "^3.0.0",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^9.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "encoding": "^0.1.13",
     "exceljs": "^4.4.0",
     "geist": "^1.3.1",
+    "iron-session": "^8.0.4",
     "jsqr": "latest",
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
