--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
-    "onnxruntime-node": "latest",
+    "onnxruntime-node": "^1.22.0-rev",
     "qrcode": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sharp": "latest",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tfjs-image-recognition-base": "^0.6.2",
